[package]
name = "jmx"
version = "0.2.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
description = "JMX client library for Rust"
keywords = ["jmx"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stefano-pogliani/jmx-rust"
readme = "README.md"

# This is needed to make cargo compile all tests/*.rs
# even though a [[test]] section is present in this file.
autotests = true


[features]
thread-support = ["crossbeam-channel", "serde_json"]


[dependencies]
failure = "^0.1.5"
j4rs = "^0.11.2"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = { version = "^1.0.26", optional = true }

[dependencies.crossbeam-channel]
optional = true
version = "^0.4.2"


[[test]]
name = "6-multi-threaded"
required-features = ["thread-support"]

[[test]]
name = "7-multi-threaded-reconnect"
required-features = ["thread-support"]

[[test]]
name = "8-multi-threaded-delay-connect"
required-features = ["thread-support"]
